--- a/inty.yaml
+++ b/inty.yaml
@@ -14,6 +14,7 @@ jobs:
       # - uses: actions/setup-python@v4
       #   with:
       #     python-version: '3.x'
+      - uses: iterative/checkout@v4
       - uses: iterative/setup-cml@v1
       - name: Train model
         run: |
