--- a/.github/workflows/ml.yaml
+++ b/.github/workflows/ml.yaml
@@ -17,6 +17,7 @@ jobs:
         python-version: '3.9'
 
     - name: Install build-essential
+      shell: bash
       run: sudo apt-get update && sudo apt-get install -y build-essential
 
     - name: Set up Node.js
