--- a/.github/workflows/ml.yaml
+++ b/.github/workflows/ml.yaml
@@ -16,6 +16,18 @@ jobs:
       with:
         python-version: '3.9'
 
+         # --- Debugging sudo ---
+    - name: Debugging sudo
+      shell: bash
+      run: |
+        echo "--- Debugging sudo ---"
+        which sudo
+        echo "User ID:"
+        id -u
+        echo "PATH environment variable:"
+        echo $PATH
+        echo "--- End Debugging sudo ---"
+
     - name: Install build-essential
       shell: bash
       run: sudo apt-get update && sudo apt-get install -y build-essential
